Refactored to us configuration and not stupid scaning in claspath. Part of initialization process.